# HyperPose

./: .clang-format  .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.cu102.bk  Makefile  Makefile.config  Makefile.old  README.md  WORKSPACE  auto-format.sh  config.py  configure  configure-tf.py  debug-uff.sh  debug.py  eval.py  export.py  export_pb.py  export_tflite.py  get_peak.py  hvd_trainer.py  idx.py  infer.py  inference-2.py  inference.py  measure_flops.py  models.py  models_hao28.py  models_hao28_experimental.py  models_mobilenet.py  models_vgg.py  models_vggtiny.py  official_test.py  opencv.BUILD  pretrain.py  processor.py  (+15 more)
.github/workflows/: ci.yaml  ci.yml
Hyperpose/Config/: __init__.py  config_lopps.py  config_mbtopps.py  define.py
Hyperpose/Dataset/: __init__.py
Hyperpose/Model/: __init__.py  backbones.py  common.py  human.py
_inference/: common.py  smoother.py
_inference/pafprocess/: .gitignore  Makefile  README.md
cmake/: 3rdparty.cmake  HyperPoseConfig.cmake.in  build.cmake  cli.cmake  configuration.h.in  cuda.cmake  examples.cmake  helpers.cmake  hyperpose.cmake  hyperpose.fake.cmake  openpose-plus.cmake  package.cmake  pose.cmake  swiftpose.cmake  tests.cmake  user_codes.cmake
cpp/: .gitignore  Makefile  README.md  profile.sh
cpp/examples/app/: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
cpp/examples/app/cmake/: 3rdparty.cmake  pafprocess.cmake  tensorflow.cmake
cpp/examples/app/src/: human.h  input.cc  input.h  main.cc  paf.cc  paf.h  timer.h  tracer.h  vis.cc  vis.h
cpp/pose-inference/: BUILD  main.cc  pose-detector.cc  pose-detector.h
datasets/: __init__.py  coco_dataset.py
doc/: .gitignore  Doxyfile  Makefile  conf.py  index.rst
doc/markdown-doc/: cpp-inference.md
docker/: Dockerfile  Dockerfile.builder  Dockerfile.builder-cpu  Dockerfile.builder-cpu-bionic  Dockerfile.builder-cpu-ubuntu18  Dockerfile.builder-gpu  Dockerfile.tensorrt  Dockerfile.travis-ci  Makefile  sources.list.ustc
docs/: Doxyfile  conf.py  index.rst  requirements.txt
docs/doxygen/: Doxyfile  Doxyfile.bak
examples/: batch_stream.hpp  channel.hpp  cli.cpp  example-inference-1.py  example-inference-2.py  example_batch_detector.cpp  example_live_camera.cpp  example_operator_api_batched_images.cpp  example_stream_api.cpp  example_stream_detector.cpp  gen_serialized_engine.example.cpp  input.cpp  input.h  operator_api_batched_images.example.cpp  operator_api_batched_images_paf.example.cpp  operator_api_batched_images_pifpaf.example.cpp  operator_api_batched_images_pose_proposal.example.cpp  operator_api_batched_images_uff.example.cpp  operator_api_imshow_paf.example.cpp  operator_api_imshow_pose_proposal.example.cpp  operator_api_video.example.cpp  operator_api_video_paf.example.cpp  operator_api_video_pose_proposal.example.cpp  operator_api_video_uff.example.cpp  pose_detector.cpp  preprocessing.cpp  preprocessing.hpp  spinlock.cpp  spinlock.hpp  stream_api_video.example.cpp  stream_api_video_paf.example.cpp  stream_api_video_pose_proposal.example.cpp  stream_api_video_uff.example.cpp  stream_detector.cpp  stream_detector.h  test_thread_pool.cpp  thread_pool.cpp  thread_pool.hpp  uff-runner.py  utility.hpp  (+4 more)
examples/tests/: thread_pool.test.cpp  thread_safe_queue.test.cpp  version.test.cpp
examples/tutorial/: minimum_operator_api_video.example.cpp  minimum_stream_api_video.example.cpp
examples/user_codes/: README.md
hyperpose/Config/: __init__.py  config_lopps.py  config_mbtopps.py  config_opps.py  config_pifpaf.py  config_ppn.py  config_pretrain.py  define.py
hyperpose/Dataset/: __init__.py  base_dataset.py  common.py  dmadapt_dataset.py  multi_dataset.py
hyperpose/Model/: __init__.py  augmentor.py  backbones.py  base_model.py  common.py  domainadapt.py  examine.py  human.py  metrics.py  pretrain.py  processor.py  train.py
include/: channel.hpp  coco.h  human.h  openpose-plus.h  openpose-plus.hpp  paf.h  pose_detector.h  stream_detector.h  vis.h
include/hyperpose/: hyperpose.hpp
include/openpose-plus/: human.h
include/openpose_plus/: openpose_plus.hpp
include/swiftpose/: swiftpose.hpp
inference/: common.py  estimator.py  estimator2.py  eval.py  export.py  models.py  pafprocess.py  post_process.py  run.py  test_inference-2.py  test_inference.py
inference/pafprocess/: Makefile  setup.py
inference/tensblur/: 1k_read.py  smoother.py
models/: __init__.py  common_utils.py
models/inference/: common.py
openpose_paf/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.config  __init__.py  coco.h  download-testdata.sh  human.h  openpose_paf.py  paf.cpp  paf.h  post-process.cpp  post-process.h  tensor.h  tensor_proxy.h  tracer.cpp
openpose_paf/tests/: test_paf.cpp
openpose_plus/: utils.py
scripts/: .gitignore  auto-format.sh  check_docker_run.py  download-openpifpaf-model.sh  download-openpose-coco-model.sh  download-openpose-mobile-model.sh  download-openpose-res50-model.sh  download-openpose-thin-model.sh  download-ppn-res50-model.sh  download-pretrained-inf-models.sh  download-test-data.sh  download-tinyvgg-model.sh  download-tinyvgg-v2-model.sh  downloader.py  export-uff.sh  freeze-graph.sh  install-bazel.sh  install-gflags.sh  install-glog.sh  install-mpi.sh  install-pafprocess.sh  live-camera.sh  profile.sh  run-uff-cpp.sh  run-uff-py.sh  run-uff.sh  test_docker.py  test_paf.sh
src/: .gitignore  BUILD  build-gpu.cmake  build.cmake  coco.hpp  color.hpp  cuda_buffer.cpp  cuda_buffer.h  cudnn.cpp  cudnn.hpp  cudnn_kernel_conv.hpp  cudnn_kernel_pool.hpp  cudnn_traits.hpp  data.cpp  debug.h  example.cpp  example_live_camera.cpp  example_stream_detector.cpp  fake_openpose-plus.cpp  fake_openpose_plus.cpp  fake_uff-runner.cpp  gauss_kernel.py  human.cpp  human.h  input.cpp  input.h  logger.h  logging.cpp  logging.hpp  main.cpp  mem_buffer.h  npp.cpp  npp.hpp  paf.cpp  paf.h  paf_.cpp  pifpaf.cpp  pose_detector.cpp  pose_detector.h  pose_proposal.cpp  (+32 more)
tensorrt/: .gitignore  WORKSPACE
train_configs/: __init__.py  train_config_lopps.py  train_config_ppn.py
(+186 files in other folders)
