CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(openpose-paf)

SET(CMAKE_CXX_STANDARD 11)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
SET(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(opencv)

FILE(GLOB srcs *.cpp)
ADD_LIBRARY(paf SHARED ${srcs})
TARGET_LINK_LIBRARIES(paf opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs)

ADD_EXECUTABLE(test_paf ./tests/test_paf.cpp)
TARGET_LINK_LIBRARIES(test_paf paf)
